fix: 리뷰 기반 수정 (효율성 개선)